Componentes home y category

--- a/RecipesBC/app.json
+++ b/RecipesBC/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "RecipesBC",
+    "name": "Recetas B&C",
     "slug": "RecipesBC",
     "version": "1.0.0",
     "orientation": "portrait",
