--- a/RecipesBC/package.json
+++ b/RecipesBC/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-firebase/app": "^8.3.0",
     "@react-navigation/bottom-tabs": "^5.6.1",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
     "expo": "^38.0.8",
     "expo-splash-screen": "~0.3.1",
     "expo-status-bar": "^1.0.0",
+    "firebase": "^7.17.1",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
